# learning-ai-assisted-coding

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  part03-session-ses_1392.md  pyproject.toml  session-ses_0ff1.md
alembic/: env.py
alembic/versions/: 0efd7a183e11_use_numeric_for_money_columns.py  8fb53bddf4f8_add_must_change_password.py  b6c8a5ea7783_initial_schema.py
aspire/: ECommerce.slnx
aspire/ECommerce.AppHost/: AppHost.cs  ECommerce.AppHost.csproj  aspire.config.json
aspire/ECommerce.AppHost/Properties/: launchSettings.json
aspire/ECommerce.ServiceDefaults/: ECommerce.ServiceDefaults.csproj
graphify-out/: GRAPH_REPORT.md  graph.json
graphify-out/cache/: stat-index.json
graphify-out/wiki/: index.md
src/application/dto/: dtos.py
src/application/ports/: cart_repository.py  email_port.py  event_bus.py  inventory_repository.py  order_repository.py  product_repository.py  user_repository.py
src/application/result/: __init__.py
src/application/use_cases/: auth_use_cases.py  cart_use_cases.py  inventory_use_cases.py  (+2 more)
src/framework/: main.py  otel_wrapper.sh
src/frontend/: html_router.py
templates/: base.html  index.html
templates/admin/: dashboard.html  inventory.html  orders.html  products.html
templates/auth/: change_password.html  login.html  profile.html  register.html
templates/cart/: cart.html
templates/orders/: detail.html  history.html
templates/products/: _list_items.html  detail.html  list.html
tests/: test_api.py  test_result.py  test_use_cases.py  test_value_objects.py
(+17 files in other folders)
